--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "assets/fonts/Leland"]
 	path = assets/fonts/Leland
 	url = https://github.com/MuseScoreFonts/Leland
+[submodule "external/smufl"]
+	path = external/smufl
+	url = https://github.com/w3c/smufl.git
